Complete verification steps of Install-19

--- a/verify/Install
+++ b/verify/Install
@@ -531,8 +531,16 @@ Install-19: 既存のFirefoxの強制的な上書き
 
     :1: 既定のインストール先、または指定のインストール先にインストールする（既定）
 
-    TBD
+    - メタインストーラでインストールするFirefoxとは異なるアーキテクチャ（インストール対象が32bit版であれば64bit版、インストール対象が64bit版であれば32bit版）の同一バージョンのFirefoxのインストーラを使用し、Firefoxを既定のインストール先でない場所（例：`C:\Apps\AnotherFirefox`）にインストールする。
+    - 検証用ユーザーとして今バージョンのメタインストーラ `{{meta_installer_file_name}}*.exe` を実行する。
+      管理者権限を要求された場合は、`管理者`ユーザーで認証する。
+    - **確認**
+        - メタインストーラによってインストールされたFirefoxが、既定のインストール先またはメタインストーラ指定のインストール先に配置されている。
 
     :2: 既存のFirefoxがある場合は、そのインストール先に上書きインストールする
 
-    TBD
+    - メタインストーラでインストールするFirefoxとは異なるアーキテクチャ（インストール対象が32bit版であれば64bit版、インストール対象が64bit版であれば32bit版）の同一バージョンのFirefoxのインストーラを使用し、Firefoxを既定のインストール先でない場所（例：`C:\Apps\AnotherFirefox`）にインストールする。
+    - 検証用ユーザーとして今バージョンのメタインストーラ `{{meta_installer_file_name}}*.exe` を実行する。
+      管理者権限を要求された場合は、`管理者`ユーザーで認証する。
+    - **確認**
+        - メタインストーラによってインストールされたFirefoxが、事前にインストールした別アーキテクチャのFirefoxのインストール先（例：`C:\Apps\AnotherFirefox`）に配置されている。
