Enable and update the date: item in the front matter

--- a/migration/esr115.md
+++ b/migration/esr115.md
@@ -4,7 +4,7 @@ CJKoptions:
   - BoldFont=Noto Sans CJK JP Bold
 title:     Firefox ESR102からESR115の変更点
 author:    株式会社クリアコード
-#date:      2023年X月X日
+date:      2023年7月31日
 titlepage: true
 toc-title: 目次
 toc-own-page: true
