Use defined annotation

--- a/migration/esr128.md
+++ b/migration/esr128.md
@@ -12,7 +12,7 @@ toc-own-page: true
 
 # Firefox ESR128のリリーススケジュール
 
-Mozillaのリリースカレンダーでは、Firefox ESR128のリリース予定は以下の通り記載されています。
+Mozillaのリリースカレンダー[^release-calendar]では、Firefox ESR128のリリース予定は以下の通り記載されています。
 
 [^release-calendar]: https://whattrainisitnow.com/calendar/
 
