Update the release schedule for ESR140

--- a/migration/esr140.md
+++ b/migration/esr140.md
@@ -10,29 +10,25 @@ toc-title: 目次
 toc-own-page: true
 ---
 
-# Firefox ESR128のリリーススケジュール
+# Firefox ESR140のリリーススケジュール
 
-Mozillaのリリースカレンダー[^release-calendar]では、Firefox ESR128のリリース予定は以下の通り記載されています。
+Mozillaのリリースカレンダー[^release-calendar]では、Firefox ESR140のリリース予定は以下の通り記載されています。
 
 [^release-calendar]: https://whattrainisitnow.com/calendar/
 
 |リリース日     |通常版リリースバージョン|ESR版リリースバージョン|備考                |
 |---------------|------------------------|-----------------------|--------------------|
-| 2024年6月11日 | Firefox 127            | 115.12                |ESR128ベータ版      |
-| 2024年7月9日  | Firefox 128            | 115.13/128.0          |ESR128正式版        |
-| 2024年8月6日  | Firefox 129            | 115.14/128.1          |                    |
-| 2024年9月3日  | Firefox 130            | 115.15/128.2          |                    |
-| 2024年10月1日 | Firefox 131            | 115.16/128.3          |                    |
-| 2024年10月29日| Firefox 132            | 115.17/128.4          |                    |
-| 2024年11月26日| Firefox 133            | 115.18/128.5          |                    |
-| 2025年1月7日  | Firefox 134            | 115.19/128.6          |                    |
-| 2025年2月4日  | Firefox 135            | 115.20/128.7          |                    |
-| 2025年3月4日  | Firefox 136            | 115.21/128.8          |                    |
-| 2025年4月1日  | Firefox 137            | 128.9                 |ESR115のサポート終了|
+| 2025年5月27日 | Firefox 139            | 115.24 + 128.11       |ESR140ベータ版      |
+| 2025年6月24日 | Firefox 140            | 128.12/140.0          |ESR140正式版        |
+| 2025年7月22日 | Firefox 141            | 128.13/140.1          |                    |
+| 2025年8月19日 | Firefox 142            | 128.14/140.2          |                    |
+| 2025年9月16日 | Firefox 143            | 140.3                 |ESR128のサポート終了|
+| 2025年10月14日| Firefox 144            | 140.4                 |                    |
+| 2025年11月11日| Firefox 145            | 140.5                 |                    |
+| 2025年12月9日 | Firefox 146            | 140.6                 |                    |
+| 2026年1月13日 | Firefox 147            | 140.7                 |                    |
 
-Firefox ESR115のサポートは、2025年4月1日で終了します[^specially-extended-support]（以後はセキュリティ更新が提供されません）。
-
-[^specially-extended-support]: Firefox ESR115のサポートは、当初は2024年10月1日で終了する旨アナウンスされていましたが、Windows 7、Windows 8.1などの利用者向けにサポート期限が6ヵ月間延長されました。詳細： https://github.com/mozilla/bedrock/issues/15083
+Firefox ESR128のサポートは、2025年9月16日で終了します（以後はセキュリティ更新が提供されません）。
 
 * 日付は太平洋標準時 (UTC-0800) 基準のため、日本時間では表記の日付の約1日後がリリース日となります。
 * なお、リリーススケジュールは予告なく変更される可能性があります。
